--- a/contacts-app/app/page.module.css
+++ b/contacts-app/app/page.module.css
@@ -1,35 +1,32 @@
 .container{
-  position: absolute;
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   font-family: 'Montserrat', sans-serif;
 }
 
 .container h1 {
-  position: absolute;
-  top: 20%;
   font-weight: 300;
   font-size: 5em;
   letter-spacing: 10px;
   color: #ebf6ff;
+  margin-top: 15%;
+  margin-bottom: 2%;
 }
 
 .container p {
-  position: absolute;
-  top: 35%;
   font-size: 2em;
   letter-spacing: 8px;
   color: #ebf6ff;
+  margin-bottom: 3%;
 }
 
 .button {
-  position: absolute;
-  top: 50%;
-  height: 7%;
-  width: 25%;
+  width: 25vw;
+  height: 5em;
   background-color: #1DB954;
 }
 .button:hover{
