--- a/contacts-app/app/login/login.module.css
+++ b/contacts-app/app/login/login.module.css
@@ -2,13 +2,14 @@
     width: 100%;
     height: 100%;
     display: flex;
+    justify-content: center;
     align-items: center;
-    flex-direction: column;
     background-color: #2D3540;
 }
 
 .containerAuth {
-    margin-top: 13%;
+    position: absolute;
+    top: 30%;
     height: 10vh;
     width: 20vw;
     display: flex;
@@ -36,11 +37,12 @@
 }
 
 .container .emailInput {
+    position: absolute;
     box-shadow: inset 0px 2px 4px #323A44;
     border: none;
     outline: none;
     width: 30vw;
-    margin-top: 2%;
+    top: 40%;
     margin-bottom: 1%;
     background-color: #323A44;
 }
@@ -74,6 +76,18 @@
     background-color: #6B99D4;
     width: 10vw;
     height: 6vh;
-    top: 58%;
+    top: 56%;
     right: 35%;
 }
+
+@media (max-width : 1400px){
+    .container .emailInput{
+       width: 40vw;
+    }
+   .container .passwordInput {
+       width: 40vw;
+   }
+   .containerAuth{
+    width: 30vw;
+   }
+  }
