--- a/contacts-app/app/home/home.module.css
+++ b/contacts-app/app/home/home.module.css
@@ -4,5 +4,5 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #2D3540;
+    background-color: #0d1117;
 }
