--- a/contacts-app/components/Navbar/Navbar.module.css
+++ b/contacts-app/components/Navbar/Navbar.module.css
@@ -18,6 +18,15 @@
     color: #0c8ce9;
 }
 
+.search{
+    position: absolute;
+    left: 5%;
+    background-color: #3C3B3D;
+}
+.search input {
+    color:  #fff;
+}
+
 .navContainer button {
     position: absolute;
     right: 7%;
@@ -32,4 +41,64 @@
     transition: 0.4s ease;
 }
 
+.navContainer button:hover{
+    color: #6B99D4;
+}
 
+.Dropdown{
+    position: absolute;
+    right: 2.2%;
+    bottom: -150%;
+    width: 10vw;
+    height: 150%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #0C0E0F;
+    border-radius: 5%;
+    transition: 0.8s ease;
+}
+
+.Dropdown ul {
+    list-style: none;
+    font-family: 'Inter', sans-serif;
+    width: 100%;
+    text-align: start;
+}
+
+.Dropdown ul li {
+    font-size: 0.9vw;
+    padding: 5%;
+    margin: 3%;
+    max-width: 100%;
+    cursor: pointer;
+    border-radius: 5%;
+    transition: 0.5s ease;
+}
+
+.Dropdown ul li:hover {
+    background-color:#3C3B3D;
+    color: #6B99D4;
+}
+
+@media (max-width : 1400px){
+    .Dropdown {
+        width: 15vw;
+    }
+  }
+
+  @media (max-width : 1050px){
+    .Dropdown {
+        width: 20vw;
+    }
+    .Dropdown ul li{
+        font-size: 1.3vw;
+    }
+    .navContainer button {
+        right: 11%;
+    }
+    .search{
+        left: 8%;
+    }
+  }
